# CS2050

./: .gitignore  CMakeLists.txt
junk/: a.out  collaz_conjecture.c  jagged_array.c
lab0/: lab0.c  lab0.h  main.c
lab1/: debugNumbers.txt  lab0.c  lab1.c  lab1.h  main.c  numbers.txt
lab10/: lab10.c  main.c
lab2/: debugNumbers.txt  lab1.c  lab2.c  lab2.h  main.c  numbers.txt
lab3/: a.out  lab3.c  lab3.h  main.c
lab4/: a.out  lab4.c  lab4.h  main.c
lab5/: lab5.c  lab5.h  main.c
lab6/: lab6.c  main.c
lab7/: lab7.c  main.c
prelab0/: prelab1.c
prelab1/: prelab1.c
prelab10/: main.c  prelab10.c  prelab10.h
prelab2/: prelab2.c
prelab3/: prelab3.c
prelab4/: float.txt  prelab3.c  prelab4.c
prelab5/: employees.txt  matt_functions.h  prelab5.c
prelab6/: altlab6.c  altlab6.h  altmain.c  main.c  prelab6.c  prelab6.h
prelab7/: a.out  main.c  prelab7.c  prelab7.h
prelab7/altlab7/: alt7.c  alt7.h  main.c
prelab8/: main.c  prelab8.c  prelab8.h
prelab9/: main.c  prelab9.c  prelab9.h
